Problem: tests without test framework
Solution: migrate to unity

--- a/Makefile.am
+++ b/Makefile.am
@@ -476,7 +476,8 @@ tests_test_pair_tcp_CPPFLAGS = ${UNITY_CPPFLAGS}
 tests_test_reqrep_inproc_SOURCES = \
 	tests/test_reqrep_inproc.cpp \
 	tests/testutil.hpp
-tests_test_reqrep_inproc_LDADD = src/libzmq.la
+tests_test_reqrep_inproc_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_reqrep_inproc_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_reqrep_tcp_SOURCES = \
 	tests/test_reqrep_tcp.cpp \
@@ -493,10 +494,12 @@ tests_test_hwm_pubsub_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_hwm_pubsub_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_reqrep_device_SOURCES = tests/test_reqrep_device.cpp
-tests_test_reqrep_device_LDADD = src/libzmq.la
+tests_test_reqrep_device_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_reqrep_device_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_sub_forward_SOURCES = tests/test_sub_forward.cpp
-tests_test_sub_forward_LDADD = src/libzmq.la
+tests_test_sub_forward_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_sub_forward_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_invalid_rep_SOURCES = tests/test_invalid_rep.cpp
 tests_test_invalid_rep_LDADD = src/libzmq.la
@@ -594,7 +597,8 @@ tests_test_spec_req_SOURCES = tests/test_spec_req.cpp
 tests_test_spec_req_LDADD = src/libzmq.la
 
 tests_test_spec_rep_SOURCES = tests/test_spec_rep.cpp
-tests_test_spec_rep_LDADD = src/libzmq.la
+tests_test_spec_rep_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_spec_rep_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_spec_dealer_SOURCES = tests/test_spec_dealer.cpp
 tests_test_spec_dealer_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -672,14 +676,16 @@ tests_test_xpub_manual_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_xpub_manual_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_xpub_welcome_msg_SOURCES = tests/test_xpub_welcome_msg.cpp
-tests_test_xpub_welcome_msg_LDADD = src/libzmq.la
+tests_test_xpub_welcome_msg_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_xpub_welcome_msg_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_xpub_verbose_SOURCES = tests/test_xpub_verbose.cpp
 tests_test_xpub_verbose_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_xpub_verbose_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_atomics_SOURCES = tests/test_atomics.cpp
-tests_test_atomics_LDADD = src/libzmq.la
+tests_test_atomics_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_atomics_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_sockopt_hwm_SOURCES = tests/test_sockopt_hwm.cpp
 tests_test_sockopt_hwm_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -790,7 +796,8 @@ tests_test_rebind_ipc_LDADD = src/libzmq.la
 tests_test_reqrep_ipc_SOURCES = \
 	tests/test_reqrep_ipc.cpp \
 	tests/testutil.hpp
-tests_test_reqrep_ipc_LDADD = src/libzmq.la
+tests_test_reqrep_ipc_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_reqrep_ipc_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_timeo_SOURCES = tests/test_timeo.cpp
 tests_test_timeo_LDADD = src/libzmq.la
@@ -806,7 +813,8 @@ tests_test_use_fd_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_use_fd_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_zmq_poll_fd_SOURCES = tests/test_zmq_poll_fd.cpp
-tests_test_zmq_poll_fd_LDADD = src/libzmq.la
+tests_test_zmq_poll_fd_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_zmq_poll_fd_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 if HAVE_FORK
 if !VALGRIND_ENABLED
@@ -840,10 +848,12 @@ tests_test_pair_tipc_SOURCES = tests/test_pair_tipc.cpp
 tests_test_pair_tipc_LDADD = src/libzmq.la
 
 tests_test_reqrep_device_tipc_SOURCES = tests/test_reqrep_device_tipc.cpp
-tests_test_reqrep_device_tipc_LDADD = src/libzmq.la
+tests_test_reqrep_device_tipc_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_reqrep_device_tipc_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_reqrep_tipc_SOURCES = tests/test_reqrep_tipc.cpp
-tests_test_reqrep_tipc_LDADD = src/libzmq.la
+tests_test_reqrep_tipc_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_reqrep_tipc_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_router_mandatory_tipc_SOURCES = tests/test_router_mandatory_tipc.cpp
 tests_test_router_mandatory_tipc_LDADD = src/libzmq.la
@@ -852,7 +862,8 @@ tests_test_shutdown_stress_tipc_SOURCES = tests/test_shutdown_stress_tipc.cpp
 tests_test_shutdown_stress_tipc_LDADD = src/libzmq.la
 
 tests_test_sub_forward_tipc_SOURCES = tests/test_sub_forward_tipc.cpp
-tests_test_sub_forward_tipc_LDADD = src/libzmq.la
+tests_test_sub_forward_tipc_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_sub_forward_tipc_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_term_endpoint_tipc_SOURCES = tests/test_term_endpoint_tipc.cpp
 tests_test_term_endpoint_tipc_LDADD = src/libzmq.la
@@ -876,7 +887,8 @@ test_apps += tests/test_abstract_ipc \
 		tests/test_many_sockets
 
 tests_test_abstract_ipc_SOURCES = tests/test_abstract_ipc.cpp
-tests_test_abstract_ipc_LDADD = src/libzmq.la
+tests_test_abstract_ipc_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_abstract_ipc_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 endif
 
@@ -930,7 +942,8 @@ tests_test_scatter_gather_SOURCES = tests/test_scatter_gather.cpp
 tests_test_scatter_gather_LDADD = src/libzmq.la
 
 tests_test_dgram_SOURCES = tests/test_dgram.cpp
-tests_test_dgram_LDADD = src/libzmq.la
+tests_test_dgram_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_dgram_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_app_meta_SOURCES = tests/test_app_meta.cpp
 tests_test_app_meta_LDADD = src/libzmq.la ${UNITY_LIBS}
