Problem: zmq_msg_data & zmq_msg_size cause SIGABRT on invalid zmq_msg_t
Solution: Change asserts to unlikely tests. zmq_msg_data returns NULL on
invalid zmq_msg_t and sets errno to EFAULT. zmq_msg_size returns 0 on
invalid zmq_msg_t and sets errno to EFAULT. Introduce error code
oriented zmq_msg_bytes(zmq_msg_t *msg, size_t *bytes). zmq_msg_bytes sets
size_t *bytes to the size in bytes of the message. It returns zero on
success and -1 on error. It sets errno to EFAULT on error. The only
error condition is an invalid zmq_msg_t. Add tests and update docs.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ set(tests
   test_reqrep_device
   test_sub_forward
   test_invalid_rep
+  test_msg_access
   test_msg_flags
   test_msg_ffn
   test_connect_resolve
