--- a/configure.ac
+++ b/configure.ac
@@ -46,9 +46,10 @@ AC_SUBST(PACKAGE_VERSION)
 # ZeroMQ version 4.2.5: 6:5:1 (ABI version 5)
 # ZeroMQ version 4.3.0: 7:0:2 (ABI version 5)
 # ZeroMQ version 4.3.1: 7:1:2 (ABI version 5)
+# ZeroMQ version 4.3.2: 7:2:2 (ABI version 5)
 #
 # libzmq -version-info current:revision:age
-LTVER="7:1:2"
+LTVER="7:2:2"
 AC_SUBST(LTVER)
 
 # Take a copy of original flags
