Problem: test_pair_ipc fails on GNU/Hurd due to wildcard bind
Solution: mark it as XFAIL like the other tests that use ipc://*

--- a/Makefile.am
+++ b/Makefile.am
@@ -1047,6 +1047,7 @@ endif
 if ON_GNU
 XFAIL_TESTS += tests/test_ipc_wildcard \
 		tests/test_reqrep_ipc \
+		tests/test_pair_ipc \
 		tests/test_term_endpoint
 endif
 
