Problem: duplication across ipc_listener_t, tcp_listener_t, tipc_listener_t
Solution: extract common base class stream_listener_base_t

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -823,6 +823,8 @@ set(cxx-sources
   stream_engine.hpp
   stream_connecter_base.hpp
   stream_connecter_base.cpp
+  stream_listener_base.hpp
+  stream_listener_base.cpp
   sub.hpp
   tcp.hpp
   tcp_address.hpp
