Problem: data members are duplicated across tcp_connecter_t, ipc_connecter_t, tipc_connecter_t
Solution: extract common base class stream_connecter_base_t

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -821,6 +821,8 @@ set(cxx-sources
   stdint.hpp
   stream.hpp
   stream_engine.hpp
+  stream_connecter_base.hpp
+  stream_connecter_base.cpp
   sub.hpp
   tcp.hpp
   tcp_address.hpp
