Problem: test_monitor is not using a test framework
Solution: migrate to unity

--- a/Makefile.am
+++ b/Makefile.am
@@ -541,7 +541,8 @@ tests_test_srcfd_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_srcfd_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_monitor_SOURCES = tests/test_monitor.cpp
-tests_test_monitor_LDADD = src/libzmq.la
+tests_test_monitor_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_monitor_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_router_mandatory_SOURCES = tests/test_router_mandatory.cpp tests/testutil_unity.hpp
 tests_test_router_mandatory_LDADD = src/libzmq.la ${UNITY_LIBS}
