--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,14 +36,17 @@ environment:
       API_POLLER: poll
       WITH_LIBSODIUM: ON
       ENABLE_CURVE: ON
+      TEST_OPTIONS: '-E "(test_many_sockets)"'
     - platform: Win32
       configuration: Debug
       WITH_LIBSODIUM: ON
       ENABLE_CURVE: ON
+      TEST_OPTIONS: '-E "(test_spec_router|test_spec_pushpull|test_metadata|test_security_curve|test_dgram)"'
     - platform: x64
       configuration: Debug
       WITH_LIBSODIUM: ON
       ENABLE_CURVE: ON
+      TEST_OPTIONS: '-E "(test_spec_router|test_spec_pushpull|test_metadata|test_security_curve|test_dgram)"'
     - platform: Win32
       configuration: Release
       WITH_LIBSODIUM: OFF
@@ -65,6 +68,7 @@ environment:
       CMAKE_GENERATOR: "Visual Studio 15 2017"
       MSVCVERSION: "v141"
       MSVCYEAR: "vs2017"
+      TEST_OPTIONS: '-E "(test_many_sockets)"'
     - platform: cygwin64
       WITH_LIBSODIUM: OFF
       ENABLE_CURVE: ON
@@ -189,9 +193,10 @@ test_script:
   - cmd: if "%CMAKE_GENERATOR%"=="Visual Studio 14 2015" set PARALLELIZE=ON
   - cmd: if "%CMAKE_GENERATOR%"=="Visual Studio 12 2013 Win64" set PARALLELIZE=ON
   - cmd: if "%CMAKE_GENERATOR%"=="Visual Studio 14 2015 Win64" set PARALLELIZE=ON
+  - cmd: if not defined TEST_OPTIONS set "TEST_OPTIONS= "
   - cmd: if "%PARALLELIZE%"=="ON" (
             echo "Running tests in parallel" &&
-            set TEST_OPTIONS=-j5
+            set TEST_OPTIONS=%TEST_OPTIONS% -j5
          )
   - cmd: ctest -C "%Configuration%" -V %TEST_OPTIONS%
 
