--- a/configure.ac
+++ b/configure.ac
@@ -31,9 +31,10 @@ AC_SUBST(PACKAGE_VERSION)
 # ZeroMQ version 3.1: 3:0:0 (ABI version 3)
 # ZeroMQ version 4.0: 4:0:0 (ABI version 4)
 # ZeroMQ version 4.0.8: 4:1:0 (ABI version 4)
+# ZeroMQ version 4.0.9: 4:2:0 (ABI version 4)
 #
 # libzmq -version-info current:revision:age
-LTVER="4:1:0"
+LTVER="4:2:0"
 AC_SUBST(LTVER)
 
 # Take a copy of original flags
